worked on scrollbar issue

--- a/scss/modules/column-navigation.scss
+++ b/scss/modules/column-navigation.scss
@@ -22,7 +22,7 @@
                 font-size: $baseFontSize;
 
                 li {
-                    padding: 15px 10px 15px 25px;
+                    padding: 15px 25px;
                     height: 50px;
                 }
 
